force-app/main/default/objects/footprint__Foot_Print_RecordType__c/footprint__Foot_Print_RecordType__c.object-meta.xml
<CustomObject>
    <label>Footprint RecordType</label>
    <nameField>
        <label>Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint RecordTypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>