force-app/main/default/objects/footprint__Foot_Print_RecordType__c/fields/footprint__Foot_Print_RecordType_Object_Analysis__c.field-meta.xml
<CustomField>
    <fullName>footprint__Foot_Print_RecordType_Object_Analysis__c</fullName>
    <label>Object Analysis</label>
    <referenceTo>footprint__FootPrint__c</referenceTo>
    <relationshipLabel>Footprint Record Types</relationshipLabel>
    <relationshipName>Footprint_RecordTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>