force-app/main/default/objects/footprint__Foot_Print_RecordType__c/fields/footprint__Foot_Print_RecordType_Populate_On__c.field-meta.xml
<CustomField>
    <fullName>footprint__Foot_Print_RecordType_Populate_On__c</fullName>
    <formula>IF( footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c &gt; 0 ,  footprint__Foot_Print_RecordType_Records__c /footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>