force-app/main/default/objects/footprint__Foot_Print_RecordType__c/fields/footprint__Foot_Print_RecordType_Populate_OnText__c.field-meta.xml
<CustomField>
    <fullName>footprint__Foot_Print_RecordType_Populate_OnText__c</fullName>
    <formula>TEXT(footprint__Foot_Print_RecordType_Records__c ) +&apos; / &apos;+TEXT( footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On</label>
    <type>Text</type>
</CustomField>